fix(Task): fix Task child components visibility issues

--- a/src/scss/Progress.scss
+++ b/src/scss/Progress.scss
@@ -22,7 +22,7 @@
   }
 
   &--visible {
-    visibility: visible;
+    visibility: inherit;
   }
 
   &__header {
